--- a/health_mobile/pom.xml
+++ b/health_mobile/pom.xml
@@ -19,6 +19,12 @@
       <artifactId>health_interface</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
+          <version>2.5</version>
+          <scope>provided</scope>
+      </dependency>
   </dependencies>
 
   <build>
